03-vanilla-blue-green/blue.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: vanilla-blue-green-blue
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vanilla-blue-green
      env: blue
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vanilla-blue-green
        env: blue
    spec:
      automountServiceAccountToken: false
      containers:
        - image: 211125550721.dkr.ecr.eu-west-1.amazonaws.com/rollouts-demo:blue
          imagePullPolicy: Always
          name: vanilla-blue-green
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
#            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 5
            httpGet:
              port: http
              path: /health/liveness
          readinessProbe:
#            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 5
            httpGet:
              port: http
              path: /health/readiness
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
              ephemeral-storage: 2Gi
            limits:
              cpu: 200m
              ephemeral-storage: 2Gi
