03-vanilla-blue-green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vanilla-blue-green
  labels:
    name: vanilla-blue-green
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vanilla-blue-green
    env: green
