03-vanilla-blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanilla-blue-green
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: haxx-lb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:211125550721:certificate/d09d91b1-1d05-4c22-9614-c1aefacfff09
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/healthcheck-path: "/health/liveness"
spec:
  rules:
    - host: vanilla-blue-green.haxx.sandbox-2024.axxes.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vanilla-blue-green
                port:
                  number: 80
